<resources>
    <string name="app_name">ArFinance</string>
    <string name="app_description">Personal Finance Management</string>
    <string name="app_site">www.softlab.am</string>
    <string name="app_copyright">© 2023 Artyom Jhangiryan</string>
    <string name="app_samsung">Samsung Innovation Campus</string>
    <string name="please_wait">Please wait</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="record_type">Type</string>
    <string name="search">Search</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="view">View</string>
    <string name="clear">Clear</string>
    <string name="canceled">Canceled</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not Verified</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading…</string>
    <string name="deleted">Successfully deleted…</string>
    <string name="deleting">Deleting…</string>
    <string name="usage_count">count</string>
    <string name="camera_denied">Camera Permission Denied</string>
    <string name="camera_granted">Camera Permission Granted</string>
    <string name="write_external_granted">Write External Storage Permission Granted</string>
    <string name="write_external_denied">Write External Storage Permission Denied</string>
    <string name="notification_channel_name">ArFinance</string>
    <string name="notification_channel_desc">ArFinance notifications</string>
    <string name="warning">Warning</string>
    <string name="close">Close</string>
    <string name="failure">Failure</string>
    <string name="save">Save</string>
    <string name="unlimited">unlimited</string>
    <string name="logging_in">Logging In…</string>
    <string name="checking_user">Checking User…</string>
    <string name="new_user_signup">New User? <b>SignUp</b></string>
    <string name="enter_your_name">Enter your name…</string>
    <string name="invalid_email">Invalid email pattern…!</string>
    <string name="enter_password">Enter password…!</string>
    <string name="confirm_password_msg">Confirm password…!</string>
    <string name="password_not_match">Password doesn\'t match…!</string>
    <string name="creating_account">Creating account</string>
    <string name="saving_user_info">Saving user info…</string>
    <string name="account_created">Account created…</string>
    <string name="please_login">Please Login</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="reset_password_title">Enter your registered email address to receiver instructions to reset your password.</string>
    <string name="enter_email">Enter Email…</string>
    <string name="sending_password">Sending password recovery instructions to</string>
    <string name="instructions_sent">Instructions to reset password sent to</string>
    <string name="failed_to_send">Failed to send due to</string>
    <string name="initCategoriesTables">Init categories table…</string>
    <string name="initWalletsTables">Init wallets table…</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create New Account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="member">Member</string>
    <string name="account_status">Account Status</string>
    <string name="already_verified">Already verified…</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_pass">Change Password</string>
    <string name="updating_profile_image">Updating profile image</string>
    <string name="failed_to_upload_image">Failed to upload image due to</string>
    <string name="updating_user_profile">Updating user profile…</string>
    <string name="profile_updated">Profile updated…</string>
    <string name="new_pick">New Pick</string>
    <string name="sample_image_desc">Sample Image Description</string>
    <string name="verify_email">Verify Email</string>
    <string name="sure_send_email_verification">Are you sure you want to send email verification instructions to your email</string>
    <string name="sending_email_verification">Sending email verification instructions to your email</string>
    <string name="verification_instructions_sent">Instructions sent, check your email</string>
    <string name="scheduler">Scheduler</string>
    <string name="post_notification_denied">Post Notification Denied</string>
    <string name="post_notification_granted">Post Notification Granted</string>
    <string name="add_schedule_btn">+ Add Schedule</string>
    <string name="add_schedule">Add a new Schedule</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="schedule_name">Schedule Name</string>
    <string name="schedule_start_date">Start Date</string>
    <string name="schedule_wallet">Wallet</string>
    <string name="schedule_oper_type">Operation Type</string>
    <string name="schedule_period">Period</string>
    <string name="sure_delete_schedule">Are you sure you want to delete this schedule ?</string>
    <string name="loading_schedulers">Loading Schedulers…</string>
    <string name="pick_schedule_type">Pick Schedule Type</string>
    <string name="enter_schedule_name">Please enter schedule name…!</string>
    <string name="pick_period">Pick Period</string>
    <string name="adding_schedule">Adding schedule…</string>
    <string name="updating_schedule">Updating schedule…</string>
    <string name="schedule_added">Schedule added successfully…</string>
    <string name="schedule_updated">Schedule updated successfully…</string>
    <string name="sure_start_schedule">Are you sure you want to start this schedule ?</string>
    <string name="sure_stop_schedule">Are you sure you want to stop this schedule ?</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="started">Started !</string>
    <string name="stopped">Stopped !</string>
    <string name="enable_schedule">Enable Schedule</string>
    <string name="disable_schedule">Disable Schedule</string>
    <string name="deny_change_schedule">Schedule is enabled, no changes allowed</string>
    <string name="starting">Starting…</string>
    <string name="stopping">Stopping…</string>
    <string name="tasks_completed">Scheduler tasks completed</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="enter_old_password">Enter old password…!</string>
    <string name="enter_new_password">Enter new password…!</string>
    <string name="confirm_new_password_msg">Confirm new password…!</string>
    <string name="no_current_user">No current user…</string>
    <string name="password_updated">User password updated successfully…</string>
    <string name="reauth_failed">Re-Authentication failed…</string>
    <string name="creating_password">Changing user password</string>
    <string name="dashboard">Dashboard</string>
    <string name="signout">Sign out</string>
    <string name="sure_signout">Are you sure you want to sign out ?</string>
    <string name="income">Income</string>
    <string name="income_by_wallet">Receipts by wallets and categories</string>
    <string name="expenses">Expenses</string>
    <string name="expenses_by_wallet">Expenses by wallets and categories</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_desc">Statistics, reports and chart</string>
    <string name="categories">Categories</string>
    <string name="categories_desc">Categories of income and expenses</string>
    <string name="wallets">Wallets</string>
    <string name="wallets_desc">Wallets, Currencies and Balance</string>
    <string name="operdate">Date</string>
    <string name="operation_category">Category</string>
    <string name="operAmount">Amount</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="about">About</string>
    <string name="logviewer">Log Viewer</string>
    <string name="logs_copied_to_clipboard">Application logs have been copied to the clipboard</string>
    <string name="error_copy_to_clipboard">An error occurred while copying text to clipboard</string>
    <string name="operations">Income/Expenses</string>
    <string name="sure_delete_operation">Are you sure you want to delete this operation ?</string>
    <string name="add_operation_btn">+ Add Operation</string>
    <string name="add_income">Add a new Income</string>
    <string name="add_expense">Add a new Expense</string>
    <string name="edit_income">Edit Income</string>
    <string name="edit_expenses">Edit Expenses</string>
    <string name="operation_notes">Notes</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_category">Pick Category</string>
    <string name="adding_operation">Adding operation…</string>
    <string name="updating_operation">Updating operation…</string>
    <string name="enter_amount">Enter Amount…</string>
    <string name="operation_added">Operation added successfully…</string>
    <string name="operation_updated">Operation updated successfully…</string>
    <string name="select_date">Select a date</string>
    <string name="category_used">Category is used, impossible to delete</string>
    <string name="loading_operations">Loading Operations…</string>
    <string name="loading_operation">Loading Operation…</string>
    <string name="updating_operation_image">Updating operation image</string>
    <string name="loading_image">Loading Image…</string>
    <string name="sure_download_image">Are you sure you want to download this image ?</string>
    <string name="recognition">Recognition</string>
    <string name="recognition_start">Start amount recognition from picture ?</string>
    <string name="recognize">Recognize</string>
    <string name="select_image">To recognize the amount, select an image from the gallery or from the camera at the top of the screen.</string>
    <string name="select_image_short">Select an image from the gallery or from the camera at the top of the screen.</string>
    <string name="failed_to_get_rotation">Failed to get rotation compensation due to</string>
    <string name="failed_to_recognize">Failed to recognize text due to</string>
    <string name="preparing_image">Preparing Image…</string>
    <string name="recognizing_text">Recognizing Text…</string>
    <string name="perform_text_analysis">Perform Text Analysis, detecting amount…</string>
    <string name="recognition_failed">Sorry, recognition failed…</string>
    <string name="recognition_amount_failed">Text recognized but no amount found…</string>
    <string name="pick_amount">Pick Amount</string>
    <string name="loading_attachment">Loading Attachment…</string>
    <string name="income_category">Income Category</string>
    <string name="expenses_category">Expenses Category</string>
    <string name="spending_category">Total</string>
    <string name="pick_wallet">Pick Wallet</string>
    <string name="other_categories">Other</string>
    <string name="select_date_range">SELECT A DATE</string>
    <string name="for_all_time">For All Time</string>
    <string name="select_wallet">Now Select Wallet</string>
    <string name="add_category">Add a new Category</string>
    <string name="edit_category">Edit Category</string>
</resources>