<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".activities.CategoryAddActivity">

    <!--title bar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:background="@android:color/transparent"
            android:layout_margin="10dp"
            android:padding="5dp"/>

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/titleIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/add_income"
            android:textColor="@color/white"
            android:textSize="28sp"/>
    </RelativeLayout>

    <!-- Scroll View -->
    <ScrollView
        android:layout_marginTop="225dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--operation date (timestamp)-->
            <TextView
                android:id="@+id/operDateTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_edittext01"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/operdate"
                android:padding="10dp"
                android:textColorHint="@color/gray01"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_date_gray" />

            <!--operation amount-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/operAmountTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/operDateTv"
                android:layout_marginTop="20dp"
                app:hintEnabled="false"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <EditText
                    android:id="@+id/operAmountEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_amount_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/operAmount"
                    android:inputType="numberDecimal|numberSigned"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>


            <!--pick category from dialog-->
            <TextView
                android:id="@+id/categoryTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/operAmountTil"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_edittext01"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/operation_category"
                android:padding="10dp"
                android:textColorHint="@color/gray01"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_type_gray"
                app:drawableEndCompat="@drawable/ic_down_gray" />

            <!--operation notes-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/operNotesTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/categoryTv"
                app:hintEnabled="false"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/operNotesEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_notes_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/operation_notes"
                    android:inputType="textMultiLine|textCapSentences"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Add category button-->
            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/shape_button01"
                android:text="@string/submit"
                android:layout_below="@id/operNotesTil"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>